--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,3 +29,10 @@ jobs:
       uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
       with:
         arguments: build
+    - name: Archive build artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-artifacts
+        path: |
+          app/build/distributions
+          !app/build/distributions/app
